@@ -1,9 +1,9 @@
-;; $Header: /repo/cvs.copy/eli/Attic/fi-version.el,v 2.4 1996/05/15 23:31:38 layer Exp $
+;; $Header: /repo/cvs.copy/eli/Attic/fi-version.el,v 2.5 1996/05/31 18:38:11 layer Exp $
 
 ;; This is in a separate file so that it can be loaded at byte-compile time
 
 (defun on-ms-windows ()
-  (memq system-type '(ms-windows ms-dos win386)))
+  (memq system-type '(windows-nt ms-windows ms-dos win386)))
 
 (let ((case-fold-search t))
   (cond ((string-match "xemacs" emacs-version) (setq fi::emacs-type 'xemacs19))
